[package]
name = "rtu-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
# Copy and pasted from the example TOML
tokio = { version = "1.35.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

# Confirmed happens on the following versions:
# 0.13.1, 0.14.0, 0.15.0, 0.16.0, 0.16.1, Github master branch (most recent rev at time of writing is 56bf0fa)
tokio-modbus = {version = "0.16.1", default-features = false, features = ["tcp", "tcp-server"] }
anyhow = "1.0.99"
dialoguer = "0.11.0"
local-ip-address = "0.6.5"
log = "0.4.27"
env_logger = "0.11.8"



